--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ html5lib==0.9999999
 idna==2.6
 Markdown==2.6.6
 oauthlib==2.0.6
-psycopg2==2.7.3.2
+psycopg2-binary
 PyJWT==1.5.3
 python-decouple==3.0
 python-social-auth==0.3.6
